testsuite/poke.pkl/sref-diag-3.pk
/* { dg-do compile } */

type Foo = struct { computed int i; };

Foo{}.i; /* { dg-error "get_i.*not defined" } */
